4_k8s/1-homepage/5-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: homepage
  name: home.ar.olumpos.net
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`home.ar.olumpos.net`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: homepage
  name: home.ar.olumpos.net-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.ar.olumpos.net`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
